--- a/app/views/shared/_gbordercard.html.erb
+++ b/app/views/shared/_gbordercard.html.erb
@@ -2,10 +2,10 @@
   <%= link_to(user) do %>
   <div class="c-container" style="text-decoration: none;">
     <div class="c-box">
-    <div class="container" style="margin-right:70px"></div>
+    <div class="container" style="margin-right:50px"></div>
       <div class="c-content">
         <div class="c-details">
-          <h2><%= user.name %>, <%= user.age %> <span style="color: #7F7F7F; font-weight: 200;">&nbsp;|&nbsp;</span> <strong class="pl-8"> <%= current_user.match_percentage(user) %> % </strong>&nbsp;</h2>
+          <h2><%= user.name %>, <%= user.age %> <span style="color: #D9D9D9; font-weight: 50;">&nbsp;|&nbsp;</span> <strong class="pl-8"> <%= current_user.match_percentage(user) %> % </strong>&nbsp;</h2>
           <h3 style="font-size: 18px;"><%= user.address %></h3>
           <p style="font-size: 16px;"><strong><%= user.native_language.name.capitalize %> &nbsp;</strong> <i class="far fas fa-arrow-alt-circle-right" style="font-size: 18px; color: #FFA024;"></i>&nbsp;  &nbsp;<strong><%= user.target_language.name.capitalize %></strong></p>
           <br>
