--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <div class="background-index "></div>
 
-<div class="container d-flex justify-content-center pb-5" style="margin-top: 20px;">
+<div class="container d-flex justify-content-center pb-5" style="margin-top: 80px;">
   <div class="container-fluid bg-white" style="height:100%; box-shadow: 3px 3px 3px #F2F2F2; border: solid 1px #D9D9D9;">
     <div class="row m-3">
       <%# left column %>
@@ -53,14 +53,14 @@
 
       <div class="col-7 mt-5 pr-3">
         <div class="card col-md-8 pl-5 pr-5 rounded border-0">
-          <ul class="nav nav-tabs mb-3" id="myTab" role="tablist">
+          <ul class="nav nav-pills mb-3" id="myTab" role="tablist">
             <li class="nav-item">
               <% if @user == current_user %>
               <%# the params[:focus] is required to keep the user on the correct tab when chatting %>
               <% if params[:focus] %>
-                <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="true"><strong>MY PROFILE</strong></a>
+                <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="true">MY PROFILE</a>
               <% else %>
-                <a class="nav-link active" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="true"><strong>MY PROFILE</strong></a>
+                <a class="nav-link active" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="true">MY PROFILE</a>
               <% end %>
               <!-- if we're on a potential buddy profile, we don't need to show any tabs -->
             </li>
@@ -69,9 +69,9 @@
             <li class="nav-item" >
               <%# the params[:focus] is required to keep the user on the correct tab when chatting %>
               <% if params[:focus] %>
-                <a class="nav-link active" id="buddies-tab" data-toggle="tab" href="#buddies" role="tab" aria-controls="buddies" aria-selected="true"> <strong>BUDDIES</strong></a>
+                <a class="nav-link active" id="buddies-tab" data-toggle="tab" href="#buddies" role="tab" aria-controls="buddies" aria-selected="true"> BUDDIES</a>
               <% else %>
-                <a class="nav-link" id="buddies-tab" data-toggle="tab" href="#buddies" role="tab" aria-controls="buddies" aria-selected="true"> <strong>BUDDIES</strong></a>
+                <a class="nav-link" id="buddies-tab" data-toggle="tab" href="#buddies" role="tab" aria-controls="buddies" aria-selected="true"> BUDDIES</a>
               <% end %>
             </li>
             <% end %>
@@ -79,7 +79,7 @@
         </div>
 
 
-        <div class="tab-content" style="width: 700px">
+        <div class="tab-content" style="width: 700px;">
           <%# the params[:focus] is required to keep the user on the correct tab when chatting %>
           <% if params[:focus] %>
             <div class="tab-pane fade" id="profile" role="tabpanel" aria-label="profile-tab">
