--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -156,7 +156,7 @@
 
             <% end %>
               <%= render 'shared/tab_items', user: @user %>
-              <div id="twilio-tokens" data-twilio-tokens="<%= JSON.generate(@video_tokens) %>"></div>
+              <%# <div id="twilio-tokens" data-twilio-tokens="<%= JSON.generate(@video_tokens) %>
 
           </div>
         </div>
