--- a/app/assets/stylesheets/components/_chat.scss
+++ b/app/assets/stylesheets/components/_chat.scss
@@ -5,12 +5,14 @@
  min-height: 600px;
  max-width: 450px;
  max-height: 600px;
- border-radius: 13px;
+ border-radius: 13px 13px 0 0;
  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
  border: solid 1px $grey-3;
  color: rgba(0, 0, 0, 0.7);
  font-size: 15px;
- position: relative;
+ position: fixed;
+ right: 1vw;
+ bottom: 5vh;
 }
 
 .container-chat-top {
