Adding js to the chat

--- a/app/views/shared/_buddies_card.html.erb
+++ b/app/views/shared/_buddies_card.html.erb
@@ -10,7 +10,7 @@
             <div class="d-flex ml-1" style="width: 580px">
              <div class="b-circle"></div>
             <%# pluck the buddy's id with reflex from here %>
-              <p class="b-card-action-1 mb-0 d-flex align-items-center mt-2" style="cursor: pointer; padding-left:12px;" data-reflex-permanent data-reflex="click->ChatReflex#update" data-match="<%= user.id %>" data-chatroomId="<%= match[0].id %>"><i class="fas fa-comment" style="font-size: 30px;"></i><span>&nbsp; Let's talk!</span></p>
+              <p class="b-card-action-1 mb-0 d-flex align-items-center mt-2" style="cursor: pointer; padding-left:12px;" data-reflex-permanent data-reflex="click->ChatReflex#update" data-match="<%= user.id %>" data-chatroomId="<%= match[0].id %>"><i class="fas fa-comment" style="font-size: 30px;"></i><span>&nbsp; Message</span></p>
               </div>
           </div>
       </div>
