--- a/app/views/shared/_tab_items.html.erb
+++ b/app/views/shared/_tab_items.html.erb
@@ -13,12 +13,16 @@
       <%# BELOW HERE IS CODE FOR CHAT  %>
       <% end %>
     </div>
-
-    <div class="container-chat" style="margin-left: 45px; margin-top: 30px;"> 
+    
+    
+    <div class="container-chat" id="show" style="margin-left: 45px; margin-top: 30px;"> 
       <% match = @user.find_match(@buddy) %>
-    <div class= "container-chat-top">
-      <div class="chat-top-content  d-flex justifty-space-between">
+      <% match = @user.find_match(@buddy) %>
+    <div class= "container-chat-top d-flex align-items-center" style="width:100%">
+      <div class="chat-top-content d-flex">
       <p style="font-size: 20px";> <%= @buddy.name %> </p>
+
+      <div class="btn" id="close-show" style="color: #fff; margin-left:290px"><i class="fas fa-times"></i></div>
       </div>
     </div>
     <br>
