--- a/app/views/shared/_tab_items.html.erb
+++ b/app/views/shared/_tab_items.html.erb
@@ -19,12 +19,12 @@
       <% match = @user.find_match(@buddy) %>
       <% match = @user.find_match(@buddy) %>
     <div class= "container-chat-top d-flex align-items-center" style="width:100%">
-      <div class="chat-top-content d-flex">
-      <p style="font-size: 20px";> <%= @buddy.name %> </p>
-
-      <div class="btn" id="close-show" style="color: #fff; margin-left:290px"><i class="fas fa-times"></i></div>
+      <div class="chat-top-content d-flex align-items-center justify-space-between">
+        <div style="font-size: 20px; color: #fff; width: 390px; padding-left: 15px;"> <%= @buddy.name %> </div>
+        <div id="close-show" style="color: #fff;"><i class="fas fa-times"></i></div>
       </div>
     </div>
+
     <br>
     <br>
     <div class="messages">
