--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,6 +1,6 @@
-<div class="container mt-5 mb-5">
+<div class="container mb-5 mt-5">
   <div class="row d-flex justify-content-center">
-    <div class="col-6">
+    <div class="col-lg-6 col-md-6 col-xs-6">
       <div class="card p-5" style="background-color: #f6f2fa; border: none;">
         <h2 class="pb-4 text-center" style="color: #7E27C4;">Forgot your password?</h2>
 
