--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -68,10 +68,12 @@
   background-color: $highlight-1;
   text-decoration: none !important;
   color: white;
-  padding: 15px 28px;
-  font-size: 25px;
+  padding: 15px 25px;
+  font-size: 20px;
   border-radius: $border-radius-lg;
   border: none;
+  margin: 0;
+
   transition: color 1s ease;
 }
 
