--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -6,31 +6,81 @@
   justify-content: space-between;
   height: 50px;
   padding: 0px 25px 0px 25px;
-  }
+}
 
 .footer-links {
   display: flex;
   align-items: center;
-  }
+}
 
-.footer-links a {
+.footer-links a,
+.footer-text a {
   color: $grey-7;
   opacity: 0.75;
-  font-size: 24px;
-  padding: 0px 10px;
-}
-.footer-links a:hover {
-  opacity: 0.5;
+  font-size: 16px;
+  padding: 0px 12px;
   text-decoration: none;
 }
 
-.footer-text a {
-  color:black;
-  text-decoration: none !important;
+.footer-links a {
+  font-size: 22px;
+  padding: 0px 9px;
 }
 
+.footer-text a:first-child,
+.footer-text a:nth-child(2) {
+  margin-right: 9px;
+}
+
+.footer-links a:hover,
 .footer-text a:hover {
-  color:black;
-  text-decoration: none !important;
-  opacity: 0.7;
+  opacity: 0.5;
+}
+
+/* Smartphones */
+@media only screen and (max-width: 500px) {
+
+  .footer {
+    display: flex;
+    justify-content: center;
+    margin: 0
+  }
+
+  .footer .footer-text a {
+    display: none;
+  }
+
+  .footer-links a {
+    text-align: center;
+  }
+}
+
+/* Tablets */
+@media(min-width: 501px) and (max-width: 750px) {
+
+  .footer {
+    display: flex;
+    justify-content: center;
+    margin: 0
+  }
+
+  .footer .footer-text a {
+    display: none;
+  }
+
+  .footer-links a {
+    text-align: center;
+  }
+}
+
+/* Normal */
+@media(min-width: 751px) and (max-width: 1200px) {
+  .footer-text a:first-child,
+  .footer-text a:nth-child(2) {
+    margin-right: 2px;
+  }
+
+  .footer-text a {
+    font-size: 14px;
+  }
 }
