--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,31 +18,31 @@
 
 <!-- cards with icons -->
 <div style="background-color: #f9f9f9;">
-  <div class="container p-3">
-    <h2 class="text-center" style="font-weight: 600; font-size: 35px; color: #414040; margin-top: 65px; margin-bottom: 10x">The Ultimate Learning Experience</h2>
+  <div class="container p-2">
+    <h2 class="ultimate-lead text-center">The Ultimate Learning Experience</h2>
 
-    <div class="row d-flex justify-content-center">
-      <div class="col-4 col-lg-4">
-        <div class="card p-5 d-flex align-items-center bg-transparent" style="min-height: 400px; border: none;">
-            <div class="icon-learn"></div>
-            <hr class="m-4 divider-purple">
-          <p class="text-center" style="font-size: 25px;">Learn languages and explore other cultures</p>
+    <div class="ultimate-learning row d-flex justify-content-center">
+      <div class="col-lg-4 col-md-4 col-xs-12">
+        <div class="card d-flex align-items-center bg-transparent">
+          <div class="icon-home icon-learn"></div>
+          <hr class="m-3 divider-purple">
+          <p class="text-center">Learn foreign<br>languages and <br>explore other cultures</p>
         </div>
       </div>
 
-      <div class="col-4 col-lg-4">
-        <div class="card p-5 d-flex align-items-center bg-transparent" style="min-height: 400px; border: none;">
-            <div class="icon-people"></div>
-            <hr class="m-4 divider-purple">
-          <p class="text-center" style="font-size: 25px;">Be part of the worldwide community</p>
+      <div class="ultimate-learning col-lg-4 col-md-4 col-xs-12">
+        <div class="card p-4 d-flex align-items-center bg-transparent">
+          <div class="icon-home icon-people"></div>
+          <hr class="m-3 divider-purple">
+          <p class="text-center">Become part<br>of the worldwide<br>community</p>
         </div>
       </div>
 
-      <div class="col-4 col-lg-4">
-        <div class="card p-5 d-flex align-items-center bg-transparent" style="min-height: 400px; border: none;">
-            <div class="icon-chat"></div>
-            <hr class="m-4 divider-purple">
-          <p class="text-center" style="font-size: 25px;">Chat with language partners and get new friends</p>
+      <div class="ultimate-learning col-lg-4 col-md-4 col-xs-12">
+        <div class="card p-4 d-flex align-items-center bg-transparent">
+          <div class="icon-home icon-chat"></div>
+          <hr class="m-3 divider-purple">
+          <p class="text-center">Chat with many<br>language partners<br>and get new friends</p>
         </div>
       </div>
       
@@ -51,14 +51,14 @@
 </div>
 
 <!-- newsletter -->
-<div class="p-5" style="background-color: #5D1D91;">
-  <div class="text-center" id="newsletter">
-    <h2 class="text-white mb-3 mt-5" style="font-weight: 600; font-size: 40px;">Get news from us</h2>
-    <p class="text-white" style="font-weight: 300; font-size: 25px;">Sign up for our weekly newsletter to get the latest news,<br>updates and amazing offers delivered directly to you inbox</p>
+<div class="newsletter newsletter-container p-4 d-flex justify-content-center">
+  <div class="text-center newsletter-content">
+    <h2 class="lead">Get news from us</h2>
+    <p>Sign up for our weekly newsletter to get the latest news, updates and amazing offers delivered directly to your inbox</p>
     <br>
-    <form class="form-inline d-flex justify-content-center mb-5">
-      <input type="email" placeholder="Enter your email..." class="form-control mr-1 text-center"  style="font-size: 20px; color: red;">
-      <input type="submit" value="Subscribe" class="ml-1 button-rect-orange" style="font-size: 20px;">
+    <form class="form-inline d-flex justify-content-center">
+      <input type="email" placeholder="Enter your email..." class="form-control mr-2 text-center">
+      <input type="submit" value="Subscribe" class="button-rect-orange">
     </form>
   </div>
 </div>
