--- a/app/views/shared/_footer_not_fixed.html.erb
+++ b/app/views/shared/_footer_not_fixed.html.erb
@@ -8,9 +8,9 @@
     <%=link_to "", root_path, class: "fab fa-instagram" %>
     <%# the text on the right %>
   </div>
-  <div class=" footer footer-text">
-    <%= link_to  "Privacy policy", root_path, class: "mr-5" %> 
-    <%= link_to  "Jobs", root_path, class: "mr-5"%>
-    <%= link_to  "Terms of Service", root_path, class: "mr-0" %>
+  <div class="footer-text">
+    <%= link_to  "Privacy policy", root_path %> 
+    <%= link_to  "Jobs", root_path%>
+    <%= link_to  "Terms of Service", root_path %>
   </div>
 </div>
