--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,29 +17,29 @@
 
 
 <!-- cards with icons -->
-<div style="background-color: #f9f9f9;">
+<div style="background-color: #f4f4f4;">
   <div class="container p-2">
-    <h2 class="ultimate-lead text-center">The Ultimate Learning Experience</h2>
+  <h2 class="ultimate-lead text-center">The Ultimate Learning Experience</h2>
 
     <div class="ultimate-learning row d-flex justify-content-center">
-      <div class="col-lg-4 col-md-4 col-xs-12">
-        <div class="card d-flex align-items-center bg-transparent">
+      <div class="col-lg-4 col-md-4 col-xs-12 p-0">
+        <div class="card d-flex align-items-center bg-transparent p-0">
           <div class="icon-home icon-learn"></div>
           <hr class="m-3 divider-purple">
           <p class="text-center">Learn foreign<br>languages and <br>explore other cultures</p>
         </div>
       </div>
 
-      <div class="ultimate-learning col-lg-4 col-md-4 col-xs-12">
-        <div class="card p-4 d-flex align-items-center bg-transparent">
+      <div class="col-lg-4 col-md-4 col-xs-12 p-0">
+        <div class="card d-flex align-items-center bg-transparent p-0">
           <div class="icon-home icon-people"></div>
           <hr class="m-3 divider-purple">
           <p class="text-center">Become part<br>of the worldwide<br>community</p>
         </div>
       </div>
 
-      <div class="ultimate-learning col-lg-4 col-md-4 col-xs-12">
-        <div class="card p-4 d-flex align-items-center bg-transparent">
+      <div class="col-lg-4 col-md-4 col-xs-12 p-0">
+        <div class="card d-flex align-items-center bg-transparent p-0 pb-2">
           <div class="icon-home icon-chat"></div>
           <hr class="m-3 divider-purple">
           <p class="text-center">Chat with many<br>language partners<br>and get new friends</p>
