--- a/app/assets/stylesheets/components/_banner-home.scss
+++ b/app/assets/stylesheets/components/_banner-home.scss
@@ -1,14 +1,18 @@
 .banner-home {
-  background-image: image-url("test.png");
+  background-image:
+  linear-gradient(to bottom, rgba(255, 255, 255, 0.25), rgba(255, 255, 255, 0.1)),
+  image-url('test');
   background-size: cover;
   background-position: center;
   align-items: center;
   background-repeat: no-repeat;
   display: flex;
-  height: 95vh;
+  height: 80vh;
   top: 0;
   left: 0;
   position: relative;
+  overflow: hidden;
+  border-bottom: 0.5px #fefefe solid;
 }
 
 .banner-lead {
@@ -18,8 +22,9 @@
 }
 
 .lead-box {
-  width: 400px;
-  margin: 30px 75px;
+  width: 700px;
+  margin-left: 70px;
+  margin-bottom: 35px;
 }
 
 #banner-typed-text {
@@ -27,7 +32,6 @@
   font-weight: 400;
   height: 70px;
   display: inline-block;
-  flex-grow: 0;
   max-width: 530px;
   margin-top: 7px;
   margin-bottom: 8px;
@@ -40,3 +44,155 @@
   flex-direction: column; 
 }
 
+
+
+/* Smartphones */
+@media only screen and (max-width: 500px) {
+
+  .banner-home {
+    background-image:
+    linear-gradient(to bottom, rgba(255, 255, 255, 0.52), rgba(255, 255, 255, 0.73)),
+    image-url('bubble-test-2');
+  }
+
+  .banner-lead {
+    font-size: 45px;
+  }
+
+  .lead-box {
+    width: 700px;
+    margin-left: 75px;
+  }
+
+  #banner-typed-text {
+    font-size: 16px;
+    height: 50px;
+  }
+}
+
+/* Tablets */
+@media(min-width: 501px) and (max-width: 768px) {
+  .banner-home {
+    background-image:
+    linear-gradient(to bottom, rgba(255, 255, 255, 0.52), rgba(255, 255, 255, 0.73)),
+    image-url('bubble-test-2');
+    height: 70vh;
+  }
+
+  .banner-lead {
+    font-size: 45px;
+  }
+}
+
+/* Normal */
+@media(min-width: 769px) and (max-width: 1200px) {
+  .banner-home {
+    background-image:
+      linear-gradient(to bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.6)),
+      image-url('bubble-test-2');
+      height: 70vh;
+  }
+}
+
+
+
+// /* Smartphones */
+// @media(min-width: 376px) and (max-width: 410px) {
+
+//   .banner-home {
+//     background-image: image-url("bubble-test-3.png");
+//     height: 60vh;
+//   }
+
+//   .banner-lead {
+//     font-size: 50px;
+//   }
+
+//   .lead-box {
+//     left: 0px;
+//     top: 75px;
+//     position: absolute;
+//   }
+
+//   #banner-typed-text {
+//     font-size: 18px;
+//     height: 50px;
+//   }
+// }
+
+// @media(min-width: 411px) and (max-width: 500px) {
+//   .banner-home {
+//     background-image: image-url("bubble-test-3.png");
+//     height: 60vh;
+//   }
+
+//   .banner-lead {
+//     font-size: 55px;
+//   }
+
+//   .lead-box {
+//     left: 0px;
+//     top: 75px;
+//     position: absolute;
+//   }
+
+//   #banner-typed-text {
+//     font-size: 18px;
+//     height: 50px;
+//   }
+// }
+// /* Tablets */
+// @media(min-width: 501px) and (max-width: 666px) {
+//   .banner-home {
+//     background-image: image-url("bubble-test-3.png");
+//     height: 60vh;
+//   }
+
+//   .banner-lead {
+//     font-size: 55px;
+//   }
+
+//   .lead-box {
+//     left: 0px;
+//     top: 75px;
+//     position: absolute;
+//   }
+
+//   #banner-typed-text {
+//     font-size: 18px;
+//     height: 50px;
+//   }
+// }
+
+// /* Normal */
+// @media(min-width: 667px) and (max-width: 1200px) {
+//   body {
+//     background: green;
+//   }
+//   .banner-home {
+//     background-image: image-url("bubble-test-3.png");
+//     height: 35vh;
+//   }
+// }
+
+// /* Widescreen */
+// @media(min-width: 1201px) {
+//   body {
+//     background: orange;
+//   }
+
+//   #widescreen h1 {
+//     display: block;
+//   }
+// }
+
+// /* Landscape */
+// @media(max-height: 500px) {
+//   body {
+//     background: brown;
+//   }
+
+//   #widescreen h1 {
+//     display: block;
+//   }
+// }
