--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -82,6 +82,13 @@
   color: white;
 }
 
+@media(min-width: 300px) and (max-width: 500px) {
+  .button-purple-banner {
+    padding: 10px 18px;
+    font-size: 16px;
+  }
+}
+
 .button-chat {
   background-color: $highlight-1;
   text-decoration: none !important;
