--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,7 +10,7 @@
         <p style="cursor: pointer; position: relative"><i> <%= link_to '', user_path(current_user, focus: "buddies"), id: "notifs", class: "fas fa-envelope b-card-action-default", data: { target: "notification.mail" } %></i></p>
       </div>
 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="dropdown" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-dark navbar-toggler-icon"></span>
     </button>
 
