--- a/app/assets/stylesheets/components/_ultimate-learning.scss
+++ b/app/assets/stylesheets/components/_ultimate-learning.scss
@@ -55,9 +55,17 @@
 
   .ultimate-learning .card p {
     font-size: 20px;
+    padding-bottom: 20px;
   }
 
+  .line-bt {
+    border-bottom: 0.5px solid #b1b1b1;
+  }
 
+  
+  .line-bt:last-child {
+    border-bottom: none;
+  }
 }
 
 /* Normal x2 */
