--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,7 +22,7 @@
   <h2 class="ultimate-lead text-center">The Ultimate Learning Experience</h2>
 
     <div class="ultimate-learning row d-flex justify-content-center">
-      <div class="col-lg-4 col-md-4 col-xs-12 p-0">
+      <div class="line-bt col-lg-4 col-md-4 col-xs-12 p-0">
         <div class="card d-flex align-items-center bg-transparent p-0">
           <div class="icon-home icon-learn"></div>
           <hr class="m-3 divider-purple">
@@ -30,7 +30,7 @@
         </div>
       </div>
 
-      <div class="col-lg-4 col-md-4 col-xs-12 p-0">
+      <div class="line-bt col-lg-4 col-md-4 col-xs-12 p-0">
         <div class="card d-flex align-items-center bg-transparent p-0">
           <div class="icon-home icon-people"></div>
           <hr class="m-3 divider-purple">
@@ -38,7 +38,7 @@
         </div>
       </div>
 
-      <div class="col-lg-4 col-md-4 col-xs-12 p-0">
+      <div class="line-bt col-lg-4 col-md-4 col-xs-12 p-0">
         <div class="card d-flex align-items-center bg-transparent p-0 pb-2">
           <div class="icon-home icon-chat"></div>
           <hr class="m-3 divider-purple">
