--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -9,8 +9,8 @@
     <%# the text on the right %>
   </div>
   <div class=" footer footer-text">
-    <%= link_to  "Privacy policy", root_path, class: "mr-5" %> 
-    <%= link_to  "Jobs", root_path, class: "mr-5"%>
-    <%= link_to  "Terms of Service", root_path, class: "mr-0" %>
+    <%= link_to  "Privacy policy", root_path %> 
+    <%= link_to  "Jobs", root_path %>
+    <%= link_to  "Terms of Service", root_path %>
   </div>
 </div>
