--- a/app/assets/stylesheets/components/_icons-home.scss
+++ b/app/assets/stylesheets/components/_icons-home.scss
@@ -9,7 +9,7 @@
 }
 
 .icon-people {
-  background-image: image-url("people.svg");
+  background-image: image-url("people2.svg");
   background-size: cover;
   height: 122px;
   width: 122px;
