--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -23,25 +23,25 @@
 
     <div class="ultimate-learning row d-flex justify-content-center">
       <div class="line-bt col-lg-4 col-md-4 col-xs-12 p-0">
-        <div class="card d-flex align-items-center bg-transparent p-0">
+        <div class="card d-flex align-items-center bg-transparent p-0 mb-4">
           <div class="icon-home icon-learn"></div>
-          <hr class="m-3 divider-purple">
+          <hr class="m-3 divider-gray">
           <p class="text-center">Learn foreign<br>languages and <br>explore other cultures</p>
         </div>
       </div>
 
       <div class="line-bt col-lg-4 col-md-4 col-xs-12 p-0">
-        <div class="card d-flex align-items-center bg-transparent p-0">
+        <div class="card d-flex align-items-center bg-transparent p-0 mb-4">
           <div class="icon-home icon-people"></div>
-          <hr class="m-3 divider-purple">
+          <hr class="m-3 divider-gray">
           <p class="text-center">Become part<br>of the worldwide<br>community</p>
         </div>
       </div>
 
       <div class="line-bt col-lg-4 col-md-4 col-xs-12 p-0">
-        <div class="card d-flex align-items-center bg-transparent p-0 pb-2">
+        <div class="card d-flex align-items-center bg-transparent p-0 pb-2 mb-4">
           <div class="icon-home icon-chat"></div>
-          <hr class="m-3 divider-purple">
+          <hr class="m-3 divider-gray">
           <p class="text-center">Chat with many<br>language partners<br>and get new friends</p>
         </div>
       </div>
