--- a/app/assets/stylesheets/components/_banner-home.scss
+++ b/app/assets/stylesheets/components/_banner-home.scss
@@ -1,7 +1,7 @@
 .banner-home {
   background-image:
   linear-gradient(to bottom, rgba(255, 255, 255, 0.25), rgba(255, 255, 255, 0.1)),
-  image-url('test');
+  image-url('test-3');
   background-size: cover;
   background-position: center;
   align-items: center;
@@ -66,7 +66,7 @@
 
   #banner-typed-text {
     font-size: 20px;
-    height: 50px;
+    height: 80px;
   }
 }
 
