--- a/app/assets/stylesheets/components/_banner-index.scss
+++ b/app/assets/stylesheets/components/_banner-index.scss
@@ -1,7 +1,7 @@
 .banner-index {
     background-image:
     linear-gradient(to bottom, rgba(255, 255, 255, 0.35), rgba(255, 255, 255, 0.1)),
-    image-url('buddy-index.png');
+    image-url('buddy-index-2.png');
 
   background-size: cover;
   background-position: center;
