--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -55,6 +55,7 @@
   border-radius: $border-radius;
   border: none;
   transition: color 1s ease;
+  font-size: 20px;
 }
 
 .button-rect-orange:hover {
