--- a/app/assets/stylesheets/components/_divider.scss
+++ b/app/assets/stylesheets/components/_divider.scss
@@ -1,6 +1,5 @@
-.divider-purple {
-  background: rgb(195,155,227);
-  background: radial-gradient(circle, rgba(195,155,227,1) 0%, rgba(226,202,245,1) 100%);
+.divider-gray {
+  background: rgb(214,214,214);
   height:5px;
   width:40px;
   border-radius: 7px 7px 7px 7px;
