--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -25,7 +25,7 @@
 }
 
 .button-orange:hover {
-  background-color: #eb9422;
+  background-color: #e78a11;
   color: white;
 }
 
@@ -59,7 +59,7 @@
 }
 
 .button-rect-orange:hover {
-  background-color: #eb9422;
+  background-color: #e78a11;
   color: white;
 }
 
