--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -3,8 +3,7 @@
 
 //Primary color palette
 $highlight-1: #7E27C4;
-$highlight-2: #FFA024;
-$highlight-3: #D31E9C;
+$highlight-2: #f19e32;
 
 $positive: #1ED346;
 $negative: #FF3924;
