--- a/app/assets/stylesheets/components/_banner-home.scss
+++ b/app/assets/stylesheets/components/_banner-home.scss
@@ -1,7 +1,7 @@
 .banner-home {
   background-image:
   linear-gradient(to bottom, rgba(255, 255, 255, 0.25), rgba(255, 255, 255, 0.1)),
-  image-url('test-3');
+  image-url('bg-main');
   background-size: cover;
   background-position: center;
   align-items: center;
@@ -52,7 +52,7 @@
   .banner-home {
     background-image:
     linear-gradient(to bottom, rgba(255, 255, 255, 0.52), rgba(255, 255, 255, 0.73)),
-    image-url('bubble-test-2');
+    image-url('bg-bubbles');
   }
 
   .banner-lead {
@@ -75,7 +75,7 @@
   .banner-home {
     background-image:
     linear-gradient(to bottom, rgba(255, 255, 255, 0.52), rgba(255, 255, 255, 0.73)),
-    image-url('bubble-test-2');
+    image-url('bg-bubbles');
     height: 70vh;
   }
 
@@ -89,110 +89,7 @@
   .banner-home {
     background-image:
       linear-gradient(to bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.6)),
-      image-url('bubble-test-2');
+      image-url('bg-bubbles');
       height: 70vh;
   }
 }
-
-
-
-// /* Smartphones */
-// @media(min-width: 376px) and (max-width: 410px) {
-
-//   .banner-home {
-//     background-image: image-url("bubble-test-3.png");
-//     height: 60vh;
-//   }
-
-//   .banner-lead {
-//     font-size: 50px;
-//   }
-
-//   .lead-box {
-//     left: 0px;
-//     top: 75px;
-//     position: absolute;
-//   }
-
-//   #banner-typed-text {
-//     font-size: 18px;
-//     height: 50px;
-//   }
-// }
-
-// @media(min-width: 411px) and (max-width: 500px) {
-//   .banner-home {
-//     background-image: image-url("bubble-test-3.png");
-//     height: 60vh;
-//   }
-
-//   .banner-lead {
-//     font-size: 55px;
-//   }
-
-//   .lead-box {
-//     left: 0px;
-//     top: 75px;
-//     position: absolute;
-//   }
-
-//   #banner-typed-text {
-//     font-size: 18px;
-//     height: 50px;
-//   }
-// }
-// /* Tablets */
-// @media(min-width: 501px) and (max-width: 666px) {
-//   .banner-home {
-//     background-image: image-url("bubble-test-3.png");
-//     height: 60vh;
-//   }
-
-//   .banner-lead {
-//     font-size: 55px;
-//   }
-
-//   .lead-box {
-//     left: 0px;
-//     top: 75px;
-//     position: absolute;
-//   }
-
-//   #banner-typed-text {
-//     font-size: 18px;
-//     height: 50px;
-//   }
-// }
-
-// /* Normal */
-// @media(min-width: 667px) and (max-width: 1200px) {
-//   body {
-//     background: green;
-//   }
-//   .banner-home {
-//     background-image: image-url("bubble-test-3.png");
-//     height: 35vh;
-//   }
-// }
-
-// /* Widescreen */
-// @media(min-width: 1201px) {
-//   body {
-//     background: orange;
-//   }
-
-//   #widescreen h1 {
-//     display: block;
-//   }
-// }
-
-// /* Landscape */
-// @media(max-height: 500px) {
-//   body {
-//     background: brown;
-//   }
-
-//   #widescreen h1 {
-//     display: block;
-//   }
-// }
