--- a/app/assets/stylesheets/components/_form-style.scss
+++ b/app/assets/stylesheets/components/_form-style.scss
@@ -11,6 +11,17 @@
   margin-left: 7px;
 }
 
+@media only screen and (max-width: 500px) {
+  .form-style-mrg {
+    margin-left: 0;
+  }
+}
+
+@media (min-width: 501px) and (max-width: 760px) {
+  .form-style-mrg {
+    margin-left: 0;
+  }
+}
 
 .label {
   font-size: 20px;
@@ -21,11 +32,30 @@
 }
 
 .select-input {
-  text-align: center
+  text-align: center;
+  color: $grey-6;
 }
 
 select {
   transform: border 3s ease;
+}
+
+/*style the arrow inside the select element:*/
+.select-selected:after {
+  position: absolute;
+  content: "";
+  top: 14px;
+  right: 10px;
+  width: 0;
+  height: 0;
+  border: 6px solid transparent;
+  border-color: #fff transparent transparent transparent;
+}
+
+/*point the arrow upwards when the select box is open (active):*/
+.select-selected.select-arrow-active:after {
+  border-color: transparent transparent #fff transparent;
+  top: 7px;
 }
 
 // Same as:
