--- a/app/views/shared/_gbordercard.html.erb
+++ b/app/views/shared/_gbordercard.html.erb
@@ -5,12 +5,24 @@
     <div class="container" style="margin-right:50px"></div>
       <div class="c-content">
         <div class="c-details">
-          <h2><%= user.name %>, <%= user.age %> <span style="color: #D9D9D9; font-weight: 50;">&nbsp;|&nbsp;</span> <strong class="pl-8"> <%= current_user.match_percentage(user) %> % </strong>&nbsp;</h2>
-          <h3 style="font-size: 18px;"><%= user.address %></h3>
-          <p style="font-size: 16px;"><strong><%= user.native_language.name.capitalize %> &nbsp;</strong> <i class="far fas fa-arrow-alt-circle-right" style="font-size: 18px; color: #FFA024;"></i>&nbsp;  &nbsp;<strong><%= user.target_language.name.capitalize %></strong></p>
+          <h2>
+            <span class="text-color"><%= user.name %>, <%= user.age %><span>
+            <span class="special-char">&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;</span>
+            <strong class="pl-8"> <%= current_user.match_percentage(user) %> % </strong>&nbsp;
+          </h2>
+          <h3>
+            <span class="text-color"><%= user.address %></span>
+          </h3>
+          <p>
+            <strong><%= user.native_language.name.capitalize %> &nbsp;</strong>
+            <strong>&rarr;</strong>
+            </i>&nbsp;  &nbsp;<strong><%= user.target_language.name.capitalize %></strong>
+          </p>
           <br>
           <br>
-          <p>[ level in <strong style="color: #7E27C4"> <%= user.target_language.name.capitalize %> </strong>: <%= user.target_language_level %> ]</p>
+          <p>
+            <span class="text-color">[ level in <%= user.target_language.name.capitalize %>: &nbsp;<%= user.target_language_level %> ]</span>
+          </p>
         </div>
         <%= link_to 'Add', user_matches_path(user, @match), class: "add-button", method: :post %>
       </div>
