--- a/app/views/shared/_buddies_card.html.erb
+++ b/app/views/shared/_buddies_card.html.erb
@@ -7,11 +7,13 @@
             <span class=""><i><%= link_to '', user_match_path(user), class: "far fa-times-circle b-card-action-3", style: "font-size: 30px", method: :delete, data: { confirm: "Are you sure you want to remove this buddy?"}%></i></span></h2>
           <% end %>
           <p class="pb-0 mb-0"><%= user.address %></p>
-            <div class="d-flex ml-1" style="width: 580px">
-             <div class="b-circle"></div>
+          <div class="d-flex ml-1" style="width: 580px">
+            <div class="b-circle"></div>
             <%# pluck the buddy's id with reflex from here %>
-              <p class="b-card-action-1 mb-0 d-flex align-items-center mt-2" style="cursor: pointer; padding-left:12px;" data-reflex-permanent data-reflex="click->ChatReflex#update" data-match="<%= user.id %>" data-chatroomId="<%= match[0].id %>"><i class="fas fa-comment" style="font-size: 30px;"></i><span>&nbsp; Message</span></p>
-              </div>
+              <p class="b-card-action-1 mb-0 d-flex align-items-center mt-2" style="cursor: pointer; padding-left:12px;" data-reflex-permanent data-reflex="click->ChatReflex#update" data-match="<%= user.id %>" data-chatroomId="<%= match[0].id %>">
+                <span><i class="fas fa-comment" style="font-size: 30px;"></i>&nbsp; Message</span>
+              </p>
+            </div>
           </div>
       </div>
     </div>
