--- a/app/assets/stylesheets/components/_b-card.scss
+++ b/app/assets/stylesheets/components/_b-card.scss
@@ -12,6 +12,7 @@
 .b-card .b-card-content h2 {
   font-size: 20px;
   font-weight: 500;
+  width: 410px;
   padding-left: 23px;
   color: $highlight-1;
 }
@@ -22,7 +23,7 @@
 }
 
 .b-container {
-  max-width: 500px;
+  max-width: 400px;
 }
 
 .b-card-action-change {
