Hiding chat on the small screen

--- a/app/assets/stylesheets/components/_chat.scss
+++ b/app/assets/stylesheets/components/_chat.scss
@@ -94,3 +94,14 @@
 .message-container p {
   margin: 0 !important;
 }
+
+/* Smartphones */
+@media only screen and (max-width: 500px) {
+  .container-chat {
+    display: none;
+  }
+
+  .msg-icon {
+    display: none;
+  }
+}
