--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,30 +2,30 @@
 <%#Edit profile form%>
 <div class="container mt-5 mb-5">
   <div class="row d-flex justify-content-center">
-    <div class="col-7">
-      <div class="card p-5" style="background-color: #faf7ff; border: none;">
+    <div class="col-lg-8 col-md-8 col-xs-7">
+      <div class="card p-4" style="background-color: #faf7ff; border: none;">
         <div class="container">
           <h2 class="pb-1 text-center" style="color: #7E27C4;"> Edit your profile</h2>
           <p class="pb-3 text-center" style="font-size:18px; color: #7E27C4;">More about <strong style="color: #7E27C4;">you</strong></p>
           <br>
           <%= simple_form_for(@user) do |f| %>
-            <strong style="color: #7E27C4;"><%= f.label "Short bio:" %></strong>
+            <strong class="short-bio" style="color: #7E27C4;"><%= f.label "Short bio:" %></strong>
             <%= f.input :description, as: :text, required: false, wrapper: false, label: false, placeholder: "Enter your bio" %>
             <p class="pb-3"></p>
-            <strong style="color: #7E27C4;"><%= f.label "Age:" %></strong>
+            <strong class="age"style="color: #7E27C4;"><%= f.label "Age:" %></strong>
             <%= f.input :age, as: :integer, wrapper: false, label: false, placeholder: "Enter your age" %>
             <p class="pb-3"></p>
-            <strong style="color: #7E27C4;"><%= f.label "Gender:" %></strong>
+            <strong class="gender"style="color: #7E27C4;"><%= f.label "Gender:" %></strong>
             <%= f.association :gender, prompt: 'Choose gender..', wrapper: false, label: false %>
             <p class="pb-3"></p>
-            <strong style="color: #7E27C4;"><%= f.label "Address:" %></strong>
+            <strong class="address-edit" style="color: #7E27C4;"><%= f.label "Address:" %></strong>
             <%= f.input :address, as: :string, required: false, wrapper: false, label: false, placeholder: "Enter the address" %>
             <p class="pb-3"></p>
-            <strong style="color: #7E27C4;"><%= f.label "Interests:" %></strong>
-            <%= f.association :interests, as: :check_boxes, wrapper: false, label: false%>
+            <strong class="interests-edit"style="color: #7E27C4; align-text: center;"><%= f.label "Interests:" %></strong>
+            <div><%= f.association :interests, as: :check_boxes, wrapper: false, label: false, class: :interests2%></div>
             <p class="pb-3"></p>
-            <%= f.submit 'Save', class: "button-purple" %>
-            <%= link_to 'Cancel', user_path(@user), class: "button-secondary ml-2" %>
+            <%= f.submit 'Save', class: "button-purple change-mrg" %>
+            <%= link_to 'Cancel', user_path(@user), class: "button-secondary ml-2 change-mrg" %>
             <% end %>
         </div>
       </div>
