--- a/app/assets/stylesheets/components/_background-index.scss
+++ b/app/assets/stylesheets/components/_background-index.scss
@@ -20,3 +20,64 @@
     display: none;
   }
 }
+
+.background-index-2 {
+  background-image: image-url("bubble-group-2.svg");
+  position: absolute;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 70vh;
+  z-index: -1;  
+}
+
+@media only screen and (max-width: 500px) {
+  .background-index {
+    display: none;
+  }
+}
+
+@media only screen and (min-width: 501px) and (max-width: 768px) {
+  .background-index {
+    display: none;
+  }
+}
+
+
+
+/* Smartphones */
+@media only screen and (max-width: 500px) {
+
+  .background-index {
+    display: none
+  }
+
+  .background-index-2 {
+    display: none
+  }
+}
+
+/* Tablets */
+@media(min-width: 501px) and (max-width: 768px) {
+
+  .background-index {
+    display: none
+  }
+
+  .background-index-2 {
+    display: none
+  }
+}
+
+/* Normal */
+@media(min-width: 769px) and (max-width: 1200px) {
+
+  .background-index {
+    display: none
+  }
+
+  .background-index-2 {
+    display: none
+  }
+}
