--- a/app/assets/stylesheets/components/_edit-simple-form.scss
+++ b/app/assets/stylesheets/components/_edit-simple-form.scss
@@ -1,11 +1,6 @@
 
-
 /* Smartphones */
 @media only screen and (max-width: 500px) {
-  body {
-    background: red;
-  }
-
   .short-bio {
     width: 100%
   }
@@ -22,6 +17,24 @@
     width: 100%
   }
 
+  .interests-edit {
+    width: 100%
+  }
+
+  .button-purple.change-mrg {
+    margin-bottom: 8px;
+    width: 100px;
+  }
+
+  .button-secondary.change-mrg {
+    margin-left: 0 !important;
+  }
+}
+
+
+/* Smartphones */
+@media (min-width: 501px) and (max-width: 768px) {
+  
   .interests-edit {
     width: 100%
   }
