--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container mb-5 mt-5">
   <div class="row d-flex justify-content-center">
     <div class="col-lg-6 col-md-6 col-xs-6">
-      <div class="card p-5" style="background-color: #f6f2fa; border: none;">
+      <div class="card p-5" style="background-color: #fff; border: 1px #E5D4F3 solid;">
         <h2 class="pb-4 text-center" style="color: #7E27C4;">Forgot your password?</h2>
 
           <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
