--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,9 +1,10 @@
+<div class="background-index"></div>
 
 <%#Edit profile form%>
 <div class="container mt-5 mb-5">
   <div class="row d-flex justify-content-center">
     <div class="col-lg-8 col-md-8 col-xs-7">
-      <div class="card p-4" style="background-color: #faf7ff; border: none;">
+      <div class="card p-4" style="background-color: #fff; border: 1px #E5D4F3 solid;">
         <div class="container">
           <h2 class="pb-1 text-center" style="color: #7E27C4;"> Edit your profile</h2>
           <p class="pb-3 text-center" style="font-size:18px; color: #7E27C4;">More about <strong style="color: #7E27C4;">you</strong></p>
