--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,10 @@
 
 <div class="background-index-2"></div>
-<div class="container grid-container grid styling scroll">
+  <div class="container grid-container grid styling scroll">
 
 
-
+   <%# INFO %>
     <div class="info">
-      <%# ABOUT (LEFT PART) %>
       <div class="card bg-transparent rounded text-center border-0">
         
         <div class="container d-flex justify-content-center mb-4">
@@ -51,140 +50,112 @@
       </div>
     </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <%# ABOUT %>
     <div class="about">
-                <%# TABS %>
-                <div class="container">
-                  <div class="card nav-styling col-md-8 pl-5 pr-5 rounded border-0 bg-transparent">
-                    <ul class="nav nav-pills mb-3" id="myTab" role="tablist">
-                      <li class="nav-item">
-                        <% if @user == current_user %>
-                          <%# the params[:focus] is required to keep the user on the correct tab when chatting %>
-                          <% if params[:focus] %>
-                            <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="true">MY PROFILE</a>
-                          <% else %>
-                            <a class="nav-link active" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="true">MY PROFILE</a>
-                          <% end %>
-                          <!-- if we're on a potential buddy profile, we don't need to show any tabs -->
-                      </li>
-                        <% end %>
-                      <% if @user == current_user %>
-                        <li class="nav-item" >
-                          <%# the params[:focus] is required to keep the user on the correct tab when chatting %>
-                          <% if params[:focus] %>
-                            <a class="nav-link active" id="buddies-tab" data-toggle="tab" href="#buddies" role="tab" aria-controls="buddies" aria-selected="true"> BUDDIES</a>
-                          <% else %>
-                            <a class="nav-link" id="buddies-tab" data-toggle="tab" href="#buddies" role="tab" aria-controls="buddies" aria-selected="true"> BUDDIES</a>
-                          <% end %>
-                      </li>
-                      <% end %>
-                    </ul>
-                  </div>
-                </div>
-                                                              <div class="container container-tab">
-                                                                       <%# !!!!!!!! MAIN CONTENT 1 %>
-                                                                      <div class="tab-content" style="width: 700px;">
-                                                                        <%# the params[:focus] is required to keep the user on the correct tab when chatting %>
-                                                                        <% if params[:focus] %>
-                                                                          <div class="tab-pane fade" id="profile" role="tabpanel" aria-label="profile-tab">
-                                                                        <% else %>
-                                                                          <div class="tab-pane active show fade" id="profile" role="tabpanel" aria-label="profile-tab">
-                                                                        <% end %>
-                                                                        <div class="self-introduction">
-                                                                          <% if @user.description.nil?%>
-                                                                            <h6 style="color: #7E27C4;">SELF INTRODUCTION</h6>
-                                                                            <p class="mt-3 mb-0">Tell us more about yourself!&nbsp; &nbsp;<% if @user == current_user %>
-                                                                              <%= link_to "<span><i class='far fa-edit' style='color: #1ED346; font-size: 18px;'></i></span>".html_safe, edit_user_path(@user) %>
-                                                                            </p>
-                                                                          <% end %>
-                                                                            
-                                                                          <% elsif @user == current_user %>
-                                                                            <h6 style="color: #7E27C4;">SELF INTRODUCTION&nbsp; &nbsp; <%= link_to "<span><i class='far fa-edit' style='color: #1ED346; font-size: 18px;'></i></span>".html_safe, edit_user_path(@user) %></h6>
-                                                                            <%= @user.description %>
-                                                                          <% elsif @user != current_user %>
-                                                                            <h6 style="color: #7E27C4;">SELF INTRODUCTION&nbsp; &nbsp;</h6>
-                                                                            <%= @user.description %>
-                                                                          <% end %>
-                                                                        </div>
-                                                                        <br>
+        <%# TABS %>
+        <div class="container">
+          <div class="card nav-styling col-md-8 pl-5 pr-5 rounded border-0 bg-transparent">
+            <ul class="nav nav-pills mb-3" id="myTab" role="tablist">
+              <li class="nav-item">
+                <% if @user == current_user %>
+                  <%# the params[:focus] is required to keep the user on the correct tab when chatting %>
+                  <% if params[:focus] %>
+                    <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="true">MY PROFILE</a>
+                  <% else %>
+                    <a class="nav-link active" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="true">MY PROFILE</a>
+                  <% end %>
+                  <!-- if we're on a potential buddy profile, we don't need to show any tabs -->
+              </li>
+                <% end %>
+              <% if @user == current_user %>
+                <li class="nav-item" >
+                  <%# the params[:focus] is required to keep the user on the correct tab when chatting %>
+                  <% if params[:focus] %>
+                    <a class="nav-link active" id="buddies-tab" data-toggle="tab" href="#buddies" role="tab" aria-controls="buddies" aria-selected="true"> BUDDIES</a>
+                  <% else %>
+                    <a class="nav-link" id="buddies-tab" data-toggle="tab" href="#buddies" role="tab" aria-controls="buddies" aria-selected="true"> BUDDIES</a>
+                  <% end %>
+              </li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+        <%# MAIN CONTENT 1 %>
+        <div class="container container-tab">
+          <div class="tab-content" style="width: 700px;">
+            <%# the params[:focus] is required to keep the user on the correct tab when chatting %>
+            <% if params[:focus] %>
+              <div class="tab-pane fade" id="profile" role="tabpanel" aria-label="profile-tab">
+            <% else %>
+              <div class="tab-pane active show fade" id="profile" role="tabpanel" aria-label="profile-tab">
+            <% end %>
+            <div class="self-introduction">
+              <% if @user.description.nil?%>
+                <h6 style="color: #7E27C4;">SELF INTRODUCTION</h6>
+                <p class="mt-3 mb-0">Tell us more about yourself!&nbsp; &nbsp;<% if @user == current_user %>
+                  <%= link_to "<span><i class='far fa-edit' style='color: #1ED346; font-size: 18px;'></i></span>".html_safe, edit_user_path(@user) %>
+                </p>
+              <% end %>
+                
+              <% elsif @user == current_user %>
+                <h6 style="color: #7E27C4;">SELF INTRODUCTION&nbsp; &nbsp; <%= link_to "<span><i class='far fa-edit' style='color: #1ED346; font-size: 18px;'></i></span>".html_safe, edit_user_path(@user) %></h6>
+                <%= @user.description %>
+              <% elsif @user != current_user %>
+                <h6 style="color: #7E27C4;">SELF INTRODUCTION&nbsp; &nbsp;</h6>
+                <%= @user.description %>
+              <% end %>
+            </div>
+            <br>
 
-                                                                        <div class="ml-5 my-3 mb-0 d-flex">
+            <div class="ml-5 my-3 mb-0 d-flex">
 
-                                                                          <div class="speaks">
-                                                                            <h6 style="color: #7E27C4; padding-bottom: 12px">SPEAKS</h6>
-                                                                            <span class="purple-box-list" style=""><%= @native_language.capitalize %> <%= render "shared/flag", language: "#{@native_language}", flag_class: "flag-small" %></span>
-                                                                          </div>
-                                                                          
-                                                                          <div class="wants-to-learn">
-                                                                            <h6 style="color: #7E27C4; padding-bottom: 12px">WANTS TO LEARN</h6>
-                                                                            <span class="purple-box-list" style=""><%= @target_language.capitalize %> <%= render "shared/flag", language: "#{@target_language}", flag_class: "flag-small" %></span>
-                                                                          </div>
-                                                                        </div>
-                                                                        <br>
+              <div class="speaks">
+                <h6 style="color: #7E27C4; padding-bottom: 12px">SPEAKS</h6>
+                <span class="purple-box-list" style=""><%= @native_language.capitalize %> <%= render "shared/flag", language: "#{@native_language}", flag_class: "flag-small" %></span>
+              </div>
+              
+              <div class="wants-to-learn">
+                <h6 style="color: #7E27C4; padding-bottom: 12px">WANTS TO LEARN</h6>
+                <span class="purple-box-list" style=""><%= @target_language.capitalize %> <%= render "shared/flag", language: "#{@target_language}", flag_class: "flag-small" %></span>
+              </div>
+            </div>
+            <br>
 
-                                                                        <div class="interests ml-5">
-                                                                          <% if @user.description.nil? %>
-                                                                            <h6 style="color: #7E27C4;">INTERESTS</h6>
-                                                                            <p class="mt-3">Add your interests and help us to find the ideal buddy for you!&nbsp; &nbsp;
-                                                                              <% if @user == current_user %>
-                                                                                <%= link_to "<span><i class='far fa-edit' style='color: #1ED346; font-size: 18px;'></i></span>".html_safe, edit_user_path(@user) %>
-                                                                              <% end %></p>
-                                                                          <% elsif @user == current_user %>
-                                                                            <h6 class="mt-3 mb-1" style="color: #7E27C4;">INTERESTS&nbsp; &nbsp;<%= link_to "<span><i class='far fa-edit' style='color: #1ED346; font-size: 18px;'></i></span>".html_safe, edit_user_path(@user) %></h6>
-                                                                            <%= render 'shared/interests_purple_boxes', interests: @interests %>
-                                                                          <% elsif @user != current_user %>
-                                                                            <h6 class="mt-3 mb-1" style="color: #7E27C4;">INTERESTS&nbsp; &nbsp; </h6>
-                                                                            <%= render 'shared/interests_purple_boxes', interests: @interests %>
-                                                                          <% end %>
-                                                                        </div>
-                                                                      </div>
-                                                                      <br>
-
-                  
-                                                                 <%# !!!!!!!! MAIN CONTENT 2 %>
-                                                                      <%# the params[:focus] is required to keep the user on the correct tab when chatting %>
-                                                                      <% if params[:focus] %>
-                                                                        <div class="tab-pane active show fade" id="buddies" role="tabpanel" aria-label="buddies-tab">
-                                                                      <% else %>
-                                                                        <div class="tab-pane fade" id="buddies" role="tabpanel" aria-label="buddies-tab">
-                                                                      <% end %>
-     
-                                                                      <%= render 'shared/tab_items', user: @user %>
+            <div class="interests ml-5">
+              <% if @user.description.nil? %>
+                <h6 style="color: #7E27C4;">INTERESTS</h6>
+                <p class="mt-3">Add your interests and help us to find the ideal buddy for you!&nbsp; &nbsp;
+                  <% if @user == current_user %>
+                    <%= link_to "<span><i class='far fa-edit' style='color: #1ED346; font-size: 18px;'></i></span>".html_safe, edit_user_path(@user) %>
+                  <% end %></p>
+              <% elsif @user == current_user %>
+                <h6 class="mt-3 mb-1" style="color: #7E27C4;">INTERESTS&nbsp; &nbsp;<%= link_to "<span><i class='far fa-edit' style='color: #1ED346; font-size: 18px;'></i></span>".html_safe, edit_user_path(@user) %></h6>
+                <%= render 'shared/interests_purple_boxes', interests: @interests %>
+              <% elsif @user != current_user %>
+                <h6 class="mt-3 mb-1" style="color: #7E27C4;">INTERESTS&nbsp; &nbsp; </h6>
+                <%= render 'shared/interests_purple_boxes', interests: @interests %>
+              <% end %>
+            </div>
+          </div>
+          <br>
 
 
-                                                                </div>
-                                                                </div>
+          <%# MAIN CONTENT 2 %>
+          <%# the params[:focus] is required to keep the user on the correct tab when chatting %>
+          <% if params[:focus] %>
+            <div class="tab-pane active show fade" id="buddies" role="tabpanel" aria-label="buddies-tab">
+          <% else %>
+            <div class="tab-pane fade" id="buddies" role="tabpanel" aria-label="buddies-tab">
+          <% end %>
 
+          <%= render 'shared/tab_items', user: @user %>
 
-
-                                                             </div>
-
-
-
-
-
-
+          </div>
+          </div>
+        
     </div>
 
-
-
-
-  
+  </div>
 </div>
 
 <%= render 'shared/footer' %>
