--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,37 +1,35 @@
 // Import your components CSS files here.
-@import "alert";
-@import "avatar";
-@import "navbar";
-@import "footer";
-@import "button";
-@import "banner-home";
-@import "banner-index";
-@import "purple-boxes";
-@import "opacity";
-@import "gborder-card";
-@import "flags";
-@import "decorator";
-@import "b-card";
-@import "filter-index";
-@import "chat";
-@import "icons-home";
-@import "divider";
-@import "background-index";
-@import "logo-navbar";
-@import "logo-purple";
-@import "video-styling";
-@import "nav-messages";
-@import "card-transition";
-@import "profile-transition";
-@import "hang-up-button";
-@import "dropdown";
-@import "profile-picture";
-@import "form-style";
-@import "ultimate-learning";
-@import "newsletter";
-@import "find-friend";
-@import "show-page";
-@import "edit-simple-form";
-
-
-
+@import 'alert';
+@import 'avatar';
+@import 'navbar';
+@import 'footer';
+@import 'button';
+@import 'banner-home';
+@import 'banner-index';
+@import 'purple-boxes';
+@import 'opacity';
+@import 'gborder-card';
+@import 'flags';
+@import 'decorator';
+@import 'b-card';
+@import 'filter-index';
+@import 'chat';
+@import 'icons-home';
+@import 'divider';
+@import 'background-index';
+@import 'logo-navbar';
+@import 'logo-purple';
+@import 'video-styling';
+@import 'nav-messages';
+@import 'card-transition';
+@import 'profile-transition';
+@import 'hang-up-button';
+@import 'dropdown';
+@import 'profile-picture';
+@import 'form-style';
+@import 'ultimate-learning';
+@import 'newsletter';
+@import 'find-friend';
+@import 'show-page';
+@import 'edit-simple-form';
+@import 'animate';
