--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,3 +1,5 @@
+<div class="background-index"></div>
+
 <div class="container mb-5 mt-5">
   <div class="row d-flex justify-content-center">
     <div class="col-lg-6 col-md-6 col-xs-6">
