--- a/app/assets/stylesheets/components/_background-index.scss
+++ b/app/assets/stylesheets/components/_background-index.scss
@@ -1,12 +1,16 @@
 .background-index {
-  background-image: image-url("bubble-group.svg");
+  background-image: image-url('bubble-group.svg');
   position: absolute;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   width: 100%;
   height: 70vh;
-  z-index: -1;  
+  z-index: -1;
+}
+
+.background-index.fadeIn {
+  animation-duration: 2s;
 }
 
 @media only screen and (max-width: 500px) {
@@ -22,14 +26,14 @@
 }
 
 .background-index-2 {
-  background-image: image-url("bubble-group-2.svg");
+  background-image: image-url('bubble-group-2.svg');
   position: absolute;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   width: 100%;
   height: 70vh;
-  z-index: -1;  
+  z-index: -1;
 }
 
 @media only screen and (max-width: 500px) {
@@ -44,40 +48,35 @@
   }
 }
 
-
-
 /* Smartphones */
 @media only screen and (max-width: 500px) {
-
   .background-index {
-    display: none
+    display: none;
   }
 
   .background-index-2 {
-    display: none
+    display: none;
   }
 }
 
 /* Tablets */
-@media(min-width: 501px) and (max-width: 768px) {
-
+@media (min-width: 501px) and (max-width: 768px) {
   .background-index {
-    display: none
+    display: none;
   }
 
   .background-index-2 {
-    display: none
+    display: none;
   }
 }
 
 /* Normal */
-@media(min-width: 769px) and (max-width: 1200px) {
-
+@media (min-width: 769px) and (max-width: 1200px) {
   .background-index {
-    display: none
+    display: none;
   }
 
   .background-index-2 {
-    display: none
+    display: none;
   }
 }
