--- a/app/assets/stylesheets/components/_banner-index.scss
+++ b/app/assets/stylesheets/components/_banner-index.scss
@@ -1,7 +1,10 @@
 .banner-index {
-  background-image:
-  linear-gradient(to bottom, rgba(255, 255, 255, 0.35), rgba(255, 255, 255, 0.1)),
-  image-url('buddy-index.png');
+  background-image: linear-gradient(
+      to bottom,
+      rgba(255, 255, 255, 0.35),
+      rgba(255, 255, 255, 0.1)
+    ),
+    image-url('buddy-index.png');
 
   background-size: cover;
   background-position: center;
@@ -13,4 +16,9 @@
   margin-bottom: 30px;
   float: right;
   padding-right: 0px;
+}
+
+.banner-index.fadeIn {
+  animation-duration: 7s;
+  animation-delay: 1s;
 }
