--- a/app/assets/stylesheets/components/_banner-home.scss
+++ b/app/assets/stylesheets/components/_banner-home.scss
@@ -70,6 +70,10 @@
     margin-left: 75px;
   }
 
+  .typed-text-body {
+    margin-bottom: 20px !important;
+  }
+
   #banner-typed-text {
     font-size: 20px;
     height: 80px;
